--- a/CSS/styles-main.css
+++ b/CSS/styles-main.css
@@ -13,6 +13,7 @@
             line-height: 1.6;
             overflow: hidden; /* Disable scrolling during loading */
             background-color: #0a0a1e;
+	    z-index: -2;
         }
 
         /* Loading overlay */
@@ -229,6 +230,7 @@
             position: fixed;
             top: 0;
             left: 0;
+	    z-index: -1;
         }
 
         @import url('https://fonts.googleapis.com/css?family=Cairo');
