--- a/CSS/styles-main.css
+++ b/CSS/styles-main.css
@@ -74,6 +74,15 @@ body {
     transform: translate(-50%, -50%);
 }
 
+.main-subtitle {
+    font-size: 1rem;
+    color: #007aff;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
 /* Header */
  .header {
     background: rgba(255, 255, 255, 0.1);
